--- a/src/components/Layout/SectionTitle/SectionTitle.module.css
+++ b/src/components/Layout/SectionTitle/SectionTitle.module.css
@@ -17,7 +17,7 @@
     text-transform: uppercase;
     font-weight: 600;
     font-size: 15px;
-    color: #161179;
+    color: #d62828;
   }
   
   .sectionTitleContent {
