--- a/src/components/Layout/SectionTitle/SectionTitle.module.css
+++ b/src/components/Layout/SectionTitle/SectionTitle.module.css
@@ -6,7 +6,7 @@
   .sectionHeading {
     letter-spacing: -1px;
     font-size: 40px;
-    color: #000;
+    color: #261FB3;
   }
   
   .titleSpan {
@@ -17,7 +17,7 @@
     text-transform: uppercase;
     font-weight: 600;
     font-size: 15px;
-    color: #d62828;
+    color: #161179;
   }
   
   .sectionTitleContent {
