--- a/src/components/HomePage/About/About.module.css
+++ b/src/components/HomePage/About/About.module.css
@@ -8,6 +8,6 @@
 }
 .abouticon:hover {
     transition: all ease 0.5s;
-    background-color: #d62828;
+    background-color: #261FB3;
     border-radius: 5px;
 }
