--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -918,3 +918,13 @@ img {
   padding: 15px;
   border-radius: 15px;
 }
+/* / <<<<<<<<<<<<<<<<<<<<<<<<testimonials>>>>>>>>>>>>>>>>>>> / */
+.testimonials {
+  transition: box-shadow 0.6s ease-in-out;
+}
+
+.testimonials:hover {
+  box-shadow: #261FB3 0px 2px 4px, 
+              #261FB3 0px 7px 13px -3px, 
+              #261FB3 0px -8px 0px inset;
+}
