--- a/src/components/HomePage/Key/Key.module.css
+++ b/src/components/HomePage/Key/Key.module.css
@@ -1,6 +1,6 @@
 /* <<<<<<<<<<<<<<<<<<<<<<<<<<<<<< Service Module Styles >>>>>>>>>>>>>>>>>>>>>>>>>>>> */
 .serviceSection{
-   padding: 100px 0px;
+   padding:  0px;
 }
 
 .serviceBox {
